# creepcraft

./: .coverage  .gitignore  GAMEPLAY.md  Procfile  README.md  SoftwareRequirements.md  TeamAgreement.md  db.sqlite3  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg  thutqopt
creep/: admin.py  apps.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
creep/migrations/: 0001_initial.py  0002_creep_gamename.py
creep_project/: asgi.py  settings.py  urls.py  wsgi.py
creepcraft/: game.py  highscore.py  login.py  models.py  player.py  scores.txt  test.py  window.py
style/: style.css
tests/: test_creepcraft.py
tutorial/: openGLtutorial.py
